# roadmap_cpp_task_tracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: commands.cpp  commands.hpp  main.cpp  task.cpp  task.hpp  task_storage.cpp  task_storage.hpp  task_tracker.cpp  task_tracker.hpp
src/commands/: add_task.cpp  add_task.hpp  command.hpp  delete_task.cpp  delete_task.hpp  echo.cpp  echo.hpp  help.cpp  help.hpp  list_tasks.cpp  list_tasks.hpp  mark_task_done.cpp  mark_task_done.hpp  mark_task_in_progress.cpp  mark_task_in_progress.hpp  update_task.cpp  update_task.hpp
